--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-	<title>OpenStreetMap Help Ukraine Map</title>
-	<meta content="OpenStreetMap Help Ukraine Map" name="description"/>
+	<title>OpenStreetMap Help Ukraine Map / OSM Довідка Карта України</title>
+	<meta content="OpenStreetMap Help Ukraine Map / OSM Довідка Карта України" name="description"/>
 	<link rel="stylesheet" href="src/api/jquery-ui-1.12.1.custom/jquery-ui.min.css" type="text/css"/>
 	<link rel="stylesheet" href="src/api/openlayers/v6.2.2-custom/ol.css" type="text/css"/>
 	<link rel="stylesheet" href="src/css/font-awesome.css" type="text/css"/>
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="flex-row">
-		<div id="map" class="map">Loading... You need Javascript...Cargando necesitas Javascript...Carregant...necessites Javascript</div>
+		<div id="map" class="map">Loading... You need Javascript...Завантаження... Вам потрібен Javascript...</div>
 		<div id="menu" class="menu"></div>
 	</div>
 	<script src="src/api/jquery/3.4.1/jquery.min.js" defer=""></script>
